--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-hi
+    <div id="container"></div>
+    <script src="scripts/main.js"></script>
 </body>
-<script src="scripts/main.js"></script>
 </html>
