Updated page structure and theme

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>YouTube Search</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
-    <div id="container"></div>
+<body class="layout">
+    <header class="layout__header">
+        <h1>YouTube Search</h1>
+    </header>
+    <main class="layout__body">
+        <div class="layout__sidebar">
+            <h2>Lorem? Ipsum.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur eligendi eos esse explicabo in
+                itaque iusto obcaecati quas, saepe? Eum.</p>
+            <p>Ad consequatur error id magni ut! Adipisci aperiam beatae cum eos eveniet hic illum, laboriosam nam non
+                nostrum quaerat rem!</p>
+            <p>Amet consectetur earum error facilis ipsa iste molestias nemo quam rem repellendus repudiandae, tempora,
+                veniam voluptatum. Accusamus excepturi hic molestiae!</p>
+            <p>Explicabo nesciunt officiis quisquam. Alias aperiam atque ea ex explicabo laborum maiores nihil non
+                numquam officiis, optio soluta, veniam voluptatem?</p>
+        </div>
+        <div class="layout__content" id="youtube-search">
+        </div>
+    </main>
+    <footer class="layout__footer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, ut.</footer>
     <script src="scripts/main.js"></script>
 </body>
 </html>
